fixed spacing issues

--- a/index.css
+++ b/index.css
@@ -32,8 +32,16 @@ html {
         padding-right: 5vw;
         padding-left: 5vw;
     }
-    p {
-        margin-right: 10vw;
-        margin-right: 10vw;
+    p, .spaced {
+        padding-right: 5vw;
+        padding-left: 5vw;
+        margin-right: 5vw;
     }
+}
+@media screen and (orientation: landscape) {
+    p, .spaced {
+        padding-right: 20vw;
+        padding-left: 20vw;
+    }
+
 }
